--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         .nav-link:hover::after {
             transform: scaleX(1);
             transform-origin: bottom left;
+            
         }
 
         .fade-in {
@@ -63,11 +64,13 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             transform: translateX(-100%);
             transition: transform 0.3s ease-in-out;
+            animation: fadeIn 2s ease-in;
         }
 
         .side-panel.open {
             transform: translateX(0);
             display: block;
+            transition: transform 0.3s ease-in-out;
         }
 
         .hamburger {
@@ -87,7 +90,7 @@
         <h1 class="text-3xl font-bold">KAPILESWARAPU RAM SATYA SAI</h1>
     </header>
 
-    <nav class="side-panel bg-purple-600 text-white p-4">
+    <nav class="side-panel bg-blue-600 text-white p-4">
         <ul class="space-y-4">
             <li><a href="#about" class="nav-link hover:text-purple-300">About</a></li>
             <li><a href="#education" class="nav-link hover:text-purple-300">Education</a></li>
@@ -132,7 +135,7 @@
                     <strong>Programming Languages:</strong> Java, Python, C
                 </div>
                 <div class="bg-gray-50 p-4 rounded-lg shadow-inner card">
-                    <strong>Technologies:</strong> Machine Learning, Deep Learning, Data Science, Frontend Web development, Data analytics
+                    <strong>Technologies:</strong> Machine Learning, Deep Learning, Data Science, Web development, Data analytics
                 </div>
                 <div class="bg-gray-50 p-4 rounded-lg shadow-inner card">
                     <strong>Operating Systems:</strong> Linux, Windows
@@ -152,6 +155,9 @@
         <section id="certifications" class="bg-white p-6 rounded-lg shadow-md mb-6 card fade-in">
             <h2 class="text-2xl font-bold mb-4">Certifications</h2>
             <div class="space-y-4">
+                <div class="bg-gray-50 p-4 rounded-lg shadow-inner card">
+                    Basics of Python for Data Science - IBM(edx)
+                </div>
                 <div class="bg-gray-50 p-4 rounded-lg shadow-inner card">
                     Data Structures and Algorithms using Python - Coding Ninjas
                 </div>
